--- a/.github/workflows/cicid.yml
+++ b/.github/workflows/cicid.yml
@@ -24,10 +24,21 @@ jobs:
           node-version: '18'
 
       - name: Install Newman
-        run: npm install -g newman
+        run: | 
+         npm install -g newman
+         npm install -g newman-reporter-html
 
       - name: Run Postman Tests
         run: |
-          newman run postman/apitest.json 
+          newman run postman/apitest.json \
+          --reporters cli,html \
+          --reporter-html-export newman-report.html
+          
+      - name: Upload HTML Report
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: postman-html-report
+          path: newman-report.html
       
       
