--- a/.github/workflows/cicid.yml
+++ b/.github/workflows/cicid.yml
@@ -40,5 +40,26 @@ jobs:
         with:
           name: postman-html-report
           path: newman-report.html
+
+      - name: Send Report via Email
+        uses: dawidd6/action-send-mail@v3
+        with:
+         server_address: smtp.mail.yahoo.com
+         server_port: 465
+         secure: true
+         username: ${{ secrets.EMAIL_USERNAME }}
+         password: ${{ secrets.YAHOO_APP_PASSWORD }}
+         subject: Postman Test Report
+         to: ${{ secrets.EMAIL_RECIPIENTS }}
+         from: ${{ secrets.EMAIL_USERNAME }}
+         body: |
+          Hi,
+
+          Your latest Postman API test report is attached.
+
+          Regards,
+          GitHub Actions
+         attachments: newman-report.html
+
       
       
